-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 17.0.5-oracle, 19
-
Component/s: hotspot
-
b24
-
aarch64
-
linux
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8288795 | 17.0.5-oracle | Tobias Hartmann | P2 | Closed | Fixed | b01 |
| JDK-8289131 | 17.0.5 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
| JDK-8291663 | 11.0.18-oracle | Tobias Hartmann | P2 | Closed | Fixed | b01 |
| JDK-8295204 | 11.0.18 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
Issue can be seen in the opt / product build results (seems Darwin aarch64 has similar issues); fastdebug shows an assertion instead.
Suite is executed with -Xcomp -Xbatch -XX:ReservedCodeCacheSize=512M -XX:-TieredCompilation , this has most likely an influence on the issue.
We run into the guarantee in test api/java_time/test/java/time/TestInstant.html (see Current CompileTask: output)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (assembler_aarch64.hpp:251), pid=1910, tid=2068
# guarantee(val < (1ULL << nbits)) failed: Field too big for insn
#
# JRE version: OpenJDK Runtime Environment (19.0) (build 19-internal-adhoc..jdk-dev)
# Java VM: OpenJDK 64-Bit Server VM (19-internal-adhoc..jdk-dev, compiled mode, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0xb06f14] Instruction_aarch64::f(unsigned int, int, int) [clone .isra.29]+0x5c
#
# Core dump will be written. Default location: /output_openjdk19_dev_optU_linuxaarch64/jck_simple_api_c2_work/core
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Djava.awt.headless=true -Xms128m -Xmx288m -XX:MaxJavaStackTraceDepth=512 -Xverify:all -XX:NativeMemoryTracking=summary -XX:+UnlockDiagnosticVMOptions -XX:+PrintNMTStatistics -Xverify:all --enable-preview -Djdk.includeInExceptions=hostInfo,jar -Djdk.xml.xpathExprGrpLimit=20 -Dsun.net.maxDatagramSockets=50 -Xss4M -Xcomp -Xbatch -XX:ReservedCodeCacheSize=512M -XX:-TieredCompilation -XX:+PrintCodeCache -Djdk.xml.maxXMLNameLimit=4000 -Djava.net.preferIPv4Stack=true -Djava.security.auth.policy=/jck/jck19/JCK-runtime-19/lib/jck.auth.policy -Djava.security.auth.login.config=/jck/jck19/JCK-runtime-19/lib/jck.auth.login.config -Djava.security.policy=/jck/jck19/JCK-runtime-19/lib/jck.policy -Djava.io.tmpdir=/output_openjdk19_dev_optU_linuxaarch64/jck_simple_api_c2_work/tempdir -Djavatest.security.allowPropertiesAccess=true -Djava.util.prefs.userRoot=/priv/jvmtests/output_openjdk19_dev_optU_linuxaarch64/jck_simple_api_c2_work/tempdir -Djava.util.prefs.systemRoot=/output_openjdk19_dev_optU_linuxaarch64/jck_simple_api_c2_work/tempdir -Djava.rmi.activation.port=6284 com.sun.javatest.agent.AgentMain -active -activeHost localhost -activePort 6584
Host: AArch64, 8 cores, 62G, Ubuntu 18.04.5 LTS
Time: Thu May 19 21:59:55 2022 CEST elapsed time: 6485.271405 seconds (0d 1h 48m 5s)
--------------- T H R E A D ---------------
Current thread (0x0000ffff8c246190): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=2068, stack(0x0000ffff601cb000,0x0000ffff603cb000)]
Current CompileTask:
C2:6485271 134927 b test.java.time.TestInstant::test_millisUntil (47 bytes)
Stack: [0x0000ffff601cb000,0x0000ffff603cb000], sp=0x0000ffff603c6380, free space=2028k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xb06f14] Instruction_aarch64::f(unsigned int, int, int) [clone .isra.29]+0x5c
V [libjvm.so+0xb09238] MacroAssembler::mov_immediate64(RegisterImpl const*, unsigned long)+0x1f0
V [libjvm.so+0xb0ce28] MacroAssembler::wrap_adds_subs_imm_insn(RegisterImpl const*, RegisterImpl const*, unsigned long, void (MacroAssembler::*)(RegisterImpl const*, RegisterImpl const*, unsigned int), void (MacroAssembler::*)(RegisterImpl const*, RegisterImpl const*, RegisterImpl const*, Assembler::shift_kind, unsigned int), bool)+0xa0
V [libjvm.so+0x3534d0] overflowAddL_reg_immNode::emit(CodeBuffer&, PhaseRegAlloc*) const+0xc8
V [libjvm.so+0xc20ef8] PhaseOutput::scratch_emit_size(Node const*)+0x1a0
V [libjvm.so+0xc1d4fc] PhaseOutput::shorten_branches(unsigned int*)+0x23c
V [libjvm.so+0xc25898] PhaseOutput::Output()+0x458
V [libjvm.so+0x5e4014] Compile::Code_Gen()+0x344
V [libjvm.so+0x5e83cc] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0xa24
V [libjvm.so+0x5229ac] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0xbc
V [libjvm.so+0x5f05a0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x6e0
V [libjvm.so+0x5f140c] CompileBroker::compiler_thread_loop()+0x494
V [libjvm.so+0xe704e4] JavaThread::thread_main_inner()+0xbc
V [libjvm.so+0xe75ebc] Thread::call_run()+0x6c
V [libjvm.so+0xc0ad04] thread_native_entry(Thread*)+0xdc
C [libpthread.so.0+0x7088] start_thread+0xb0
- backported by
-
JDK-8289131 aarch64 : guarantee(val < (1ULL << nbits)) failed: Field too big for insn
-
- Resolved
-
-
JDK-8295204 aarch64 : guarantee(val < (1ULL << nbits)) failed: Field too big for insn
-
- Resolved
-
-
JDK-8288795 aarch64 : guarantee(val < (1ULL << nbits)) failed: Field too big for insn
-
- Closed
-
-
JDK-8291663 aarch64 : guarantee(val < (1ULL << nbits)) failed: Field too big for insn
-
- Closed
-
- relates to
-
JDK-8285923 [REDO] JDK-8285802 AArch64: Consistently handle offsets in MacroAssembler as 64-bit quantities
-
- Resolved
-
-
JDK-8286163 micro-optimize Instant.plusSeconds
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/74bc4851
-
Commit
openjdk/jdk17u-dev/2e2e891d
-
Commit
openjdk/jdk/593d2b7d
-
Review
openjdk/jdk11u-dev/1446
-
Review
openjdk/jdk17u-dev/498
-
Review
openjdk/jdk/8845