8287091: aarch64 : guarantee(val < (1ULL << nbits)) failed: Field too big for insn